tree-sitter-nodelang/test/corpus/if.txt
================================================================================
complex if
================================================================================

group 'my frame' {
  const RGBA2: rgba = []
  const MixRGB: f4 = mix([0.5, 0.5, 0.5, 0.0], .'alpha'=0.5) # single quotes broken here
}

# One tough question is when to namify expressions
# In this sample, we do it at frame boundaries otherwise you'd have an inline mix call
const 'Principled BSDF': bsdf = rough_metal_pbr_bsdf(.base_color='my frame'.MixRGB)

SURFACE_OUTPUT('Principled BSDF')


--------------------------------------------------------------------------------

(source_file
  (group_decl
    name: (identifier
      (quoted))
    (body
      (var_decl
        name: (identifier)
        type: (identifier)
        value: (array))
      (var_decl
        name: (identifier)
        type: (identifier)
        value: (call
          callee: (identifier)
          (args
            value: (array
              (float)
              (float)
              (float)
              (float))
            name: (identifier
              (quoted))
            value: (float))))
      (comment)))
  (comment)
  (comment)
  (var_decl
    name: (identifier
      (quoted))
    type: (identifier)
    value: (call
      callee: (identifier)
      (args
        name: (identifier)
        value: (deref
          (identifier
            (quoted))
          (identifier)))))
  (call
    callee: (identifier)
    (args
      value: (identifier
        (quoted)))))
